# CMPLRS-20241

./: .gitignore  README.md  cmplrs.cabal  test.hs
.github/workflows/: haskell.yml
actividades/: .gitignore  actividad_1_bootstraping.adoc  ensayo.tex
ejemplos/ASD/: Parser.hs  Tokens.x
ejemplos/ASD_2/: main.hs
ejemplos/LR1/: parserLR(1).hs
examenes/examen-3/: Dockerfile  README.md  main.tex
examenes/examen-3/resources/: entrypoint.sh  main.bib
practica1/: .gitignore  BernalNuñezRaul.hs  Practica1.hs  practica1.cabal  test.hs
practica2/: Practica2.hs  practica2.cabal  test.hs
practica3/: Lexer  Practica3.hs  Tests.hs  Tokens.hs  Tokens.x  practica3.cabal  test.hs
practica4/: Practica4.hs  Tests.hs  Tokens.hs  Tokens.x  parser.hs  parser.y  practica4.cabal  test.hs
practica5/: Practica5.hs  Tests.hs  practica5.cabal
practica6/: Practica6.hs  Tests.hs  practica6.cabal
practicas/practica_1/: practica_1.hs  pruebas.hs  tests.hs
