name:                practica2
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable runtests
  main-is:             test.hs
  build-depends:       base, HUnit, containers
  hs-source-dirs:      .
  default-language:    Haskell2010
  other-modules:       Practica2
